--- a/assets/component-rte.css
+++ b/assets/component-rte.css
@@ -24,7 +24,7 @@
 }
 
 .rte img {
-  height: auto;
+  /*height: auto;*/
   max-width: 100%;
   border: var(--media-border-width) solid rgba(var(--color-foreground), var(--media-border-opacity));
   border-radius: var(--media-radius);
