--- a/assets/template-giftcard.css
+++ b/assets/template-giftcard.css
@@ -12,6 +12,7 @@ div:empty,
 section:empty,
 article:empty,
 p:empty,
+/*
 h1:empty,
 h2:empty,
 h3:empty,
@@ -19,7 +20,7 @@ h4:empty,
 h5:empty,
 h6:empty {
   display: none;
-}
+}*/
 
 html {
   font-size: calc(var(--font-body-scale) * 62.5%);
